feat: added code for creating a vector store
